<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile Carrier Identifier</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="author">\@altmas5</string>
    <string name="contact_button_desc">Search a contact</string>
    <string name="call_button_desc">Make a call</string>
    <string name="formato">88888888</string>
    <string name="operador_nd">Operador móvil</string>
    <string name="claro">Claro</string>
    <string name="Movistar">Movistar</string>
    <string name="Fijo">Convencional/Fijo</string>
    <string name="idBt">Identificar</string>

</resources>