<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:showDividers="beginning|middle|end"
    tools:context=".Identificar" >

            <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="top|left"
                android:layout_margin="1dp"
                android:background="@null"
                android:contentDescription="@string/contact_button_desc"
                android:onClick="showContacts"
                android:src="@drawable/contacts" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:ems="6"
                android:hint="@string/formato"
                android:inputType="phone"
                android:maxLength="8"
                android:textSize="28sp" >

                <requestFocus />
            </EditText>
        </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.42" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:gravity="bottom|right"
            android:text="@string/author" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="86dp"
            android:background="@drawable/call"
            android:contentDescription="@string/call_button_desc"
            android:onClick="Call"
            android:src="@drawable/call" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/imageButton2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="46dp"
            android:text="@string/operador_nd"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:onClick="comparar"
            android:text="@string/idBt" />

    </RelativeLayout>

</LinearLayout>